# Bee

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Config.hpp.in  LICENSE  README.md  format.py  task4_probe.cpp
Apps/Launch/: CMakeLists.txt  Main.cpp
Bee/: Bee.hpp  CMakeLists.txt
Bee/Base/: Ascii.hpp  Base.cpp  Base.hpp  Bit.hpp  CMakeLists.txt  Check.cpp  Check.hpp  Config.hpp  Core.hpp  Defines.hpp  Diagnostics.hpp  Enum.hpp  Error.cpp  Error.hpp  Hash.hpp  Log.cpp  Log.hpp  Nameof.hpp  Naming.hpp  Numeric.hpp  Parallel.hpp  Reflection.hpp  String.hpp  Text.hpp  Threading.hpp
Bee/Base/Core/: Defines.hpp  InlineString.hpp  Macros.hpp  MoveOnlyFunction.hpp  Traits.hpp
Bee/Base/Diagnostics/: Check.cpp  Check.hpp  Error.cpp  Error.hpp  Log.cpp  Log.hpp
Bee/Base/Memory/: Allocator.hpp  Device.hpp
Bee/CUDA/: Api.cpp  Api.cu  Api.hpp  CMakeLists.txt  Check.cuh  Runtime.hpp
Bee/CUDAKernel/: Block.cuh  CMakeLists.txt  CUDAKernel.cpp  CUDAKernel.cu  CUDAKernel.hpp  Check.cuh  ELU.cuh  Elementwise.cuh  Embedding.cuh  GELU.cuh  HardShrink.cuh  HardSwish.cuh  Intrinsics.cuh  Launch.cuh  LayerNorm.cuh  MathOps.cuh  RMS.cuh  ROPE.cuh  ReLU.cuh  Reduce.cuh  Sigmoid.cuh  SoftMax.cuh  Swish.cuh  Transpose.cuh  Vectorize.cuh  Warp.cuh
Bee/Concurrency/: CMakeLists.txt  Concurrency.cpp  Concurrency.hpp  Threading.hpp
Bee/DataStructure/: CMakeLists.txt  Cache.hpp  DataStructure.cpp  DataStructure.hpp  SkipList.hpp
Bee/Detail/: Bee.cpp  Bit.hpp  Check.hpp  Common.hpp  Constants.hpp  FloatingPoint.hpp  Hash.hpp  Polynomial.hpp  Random.hpp  Setup.hpp  Vector.hpp
Bee/Editor/: CMakeLists.txt  Editor.cpp  EditorApp.cpp  EditorApp.hpp  Main.cpp
Bee/Event/: CMakeLists.txt  Connection.hpp  Event.hpp  EventBus.hpp  Signal.hpp
Bee/Math/: CMakeLists.txt  Math.hpp
Bee/SIMD/: CMakeLists.txt  Detect.cpp  Detect.hpp  SIMD.hpp  Selector.hpp  Stream.hpp  Traits.hpp
Bee/Source/: CMakeLists.txt
Bee/Task/: CMakeLists.txt  Task.hpp
Bee/Tensor/: CMakeLists.txt  README.md  Tensor.cpp  Tensor.hpp
Bee/cuKernels/: CMakeLists.txt  CUDAKernel.cpp  CUDAKernel.cu  CUDAKernel.hpp  Check.cuh
Benchmarks/: CMakeLists.txt  README.md
Benchmarks/CUDA/: CMakeLists.txt  EWiseCudaBench.cpp  MatmulCudaBench.cpp  MemcpyBench.cpp  RandomCudaBench.cpp  ReduceCudaBench.cpp  TransposeCudaBench.cpp
Benchmarks/Task/: CMakeLists.txt  TaskGraphScaleBench.cpp  TaskSubmitBench.cpp  WhenAllDepthBench.cpp  WorkPoolThroughputBench.cpp
Benchmarks/Tensor/: BenchUtil.hpp  CMakeLists.txt  CastBench.cpp  EWiseBench.cpp  MatmulBench.cpp  RandomBench.cpp  ReduceBench.cpp  TransposeBench.cpp
Source/: CMakeLists.txt
Source/Bee/: Bee.hpp  CMakeLists.txt
Source/BeeEditor/: CMakeLists.txt  Editor.cpp  Editor.hpp  Main.cpp
Source/BeeLib/: CMakeLists.txt
Source/Core/: CMakeLists.txt
Source/Editor/: CMakeLists.txt  Main.cpp
Source/Engine/: CMakeLists.txt
Source/Math/: CMakeLists.txt
Source/Runtime/: CMakeLists.txt
Tests/: BitTest.cpp  CMakeLists.txt  CommonTest.cpp  ConstantTest.cpp  FloatTest.cpp  VectorTest.cpp
Tests/Base/: BaseTests.cpp  BaseUtilsTests.cpp  CMakeLists.txt  CheckTests.cpp  EnumTests.cpp  ErrorTest.cpp  ErrorTests.cpp  EventCountTests.cpp  HashTests.cpp  InlineStringTests.cpp  LogTests.cpp  MoveOnlyFunctionTests.cpp  NameofTests.cpp  NumericTests.cpp  ParallelForTests.cpp  VerifyTests.cpp
Tests/CUDA/: AiPrimitiveTests.cu  ApiTests.cpp  CMakeLists.txt  CastTests.cu  Check.hpp  ElementWiseTests.cu  InfraTests.cpp  KernelTests.cu  LowPrecisionGemmTests.cu  MatmulTests.cu  RandomTests.cu  ReduceAxisTests.cu  ReduceTests.cu  SoftmaxTests.cu  StridedCopyTests.cu  Test.cu  TestCore.cu  TestTuple.cu  TransposeTests.cu  WarpBlockTests.cu
Tests/CUDAKernel/: BlockDeviceTestHelpers.hpp  BlockDeviceTestKernels.cu  BlockDeviceTests.cpp  CMakeLists.txt  CUDAKernelTests.cpp  CheckTests.cpp  KernelOpsTests.cu  LaunchTests.cpp  VectorizeTests.cpp  WgmmaDeviceTestKernels.cu
Tests/Concurrency/: CMakeLists.txt  ChaseLevDequeTests.cpp  ConcurrencyTests.cpp  MPMCQueueTests.cpp  SPSCQueueTests.cpp  ThreadPoolTests.cpp  ThreadingTests.cpp  WorkPoolTests.cpp
Tests/Core/: CoreTest.cpp  EventTest.cpp  LoggerTest.cpp
Tests/DataStructure/: CMakeLists.txt  CacheTests.cpp  CountMinSketchTests.cpp  DataStructureTests.cpp  HyperLogLogTests.cpp  SkipListTests.cpp
Tests/Engine/: EngineTest.cpp  LaunchTest.cpp
Tests/Event/: CMakeLists.txt  ConnectionTests.cpp  EventBusTests.cpp  EventManagerTest.cpp  SignalTests.cpp
Tests/GFX/: VulkanTest.cpp
Tests/Graphics/: GraphicsTest.cpp  VulkanTest.cpp
Tests/Math/: BitsTest.cpp  CMakeLists.txt  CommonTest.cpp  MathTest.cpp  MathTests.cpp  PolynomialTest.cpp
Tests/Memory/: PlainAllocatorTest.cpp  PlainMemorySourceTest.cpp  RingBufferTest.cpp
Tests/Runtime/: GraphTest.cpp  InputsTest.cpp  LoggerTest.cpp  MathTest.cpp  ObjectTest.cpp  UtilityTest.cpp
Tests/SIMD/: CMakeLists.txt  SimdTests.cpp
Tests/Task/: AsyncScopeTests.cpp  AsyncTaskTests.cpp  CMakeLists.txt  ParallelForEachTests.cpp  ParallelReduceTests.cpp  ParallelScanTests.cpp  ParallelSortTests.cpp  ParallelTransformTests.cpp  ParallelVerificationTests.cpp  PartitionerTests.cpp  SchedulerTests.cpp  TaskBasicTests.cpp  TaskCoAwaitTests.cpp  TaskGraphCancelTests.cpp  TaskGraphErrorTests.cpp  TaskGraphTests.cpp  TaskStateTests.cpp  TaskTests.cpp  ThenTests.cpp  WhenAllTests.cpp  WhenAnyTests.cpp
Tests/Tensor/: AiPrimitiveTests.cpp  BatchedMatmulTests.cpp  BroadcastTests.cpp  CMakeLists.txt  CastTests.cpp  ContiguousCudaTests.cpp  CreationTests.cpp  CudaRuntimeTests.cpp  CudaStubTests.cpp  DTypeTests.cpp  ElementWiseTests.cpp  GemmTests.cpp  IntegrationTests.cpp  LossTests.cpp  LowPrecisionTests.cpp  MatmulTests.cpp  RandomTests.cpp  ReduceTests.cpp  ShapeTests.cpp  SimdTests.cpp  SoftmaxTests.cpp  StorageTests.cpp  TensorSkeletonTests.cpp  TensorTests.cpp  ViewTests.cpp
Tests/Units/: BeeTest.cpp  CMakeLists.txt  CoreTest.cpp  TupleTest.cpp
Tests/Utility/: IOTest.cpp  LaunchTest.cpp  UtilityTest.cpp
Tests/cuKernels/: CMakeLists.txt  CUDAKernelTests.cpp  KernelOpsTests.cu
(+689 files in other folders)
