if(BEE_BUILD_BENCHMARKS)
    find_package(benchmark CONFIG QUIET)
    if(NOT benchmark_FOUND)
        message(STATUS "google-benchmark not found. Disabling BEE_BUILD_BENCHMARKS.")
        set(BEE_BUILD_BENCHMARKS OFF CACHE BOOL "Build benchmarks for Bee components" FORCE)
    endif()
endif()

file(GLOB component_dirs RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/*")
foreach(component_dir IN LISTS component_dirs)
    set(component_cmake "${CMAKE_CURRENT_SOURCE_DIR}/${component_dir}/CMakeLists.txt")
    if(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/${component_dir}" AND EXISTS "${component_cmake}")
        add_subdirectory("${component_dir}")
    endif()
endforeach()
